<resources>
    <string name="app_name">KIET Cookery</string>
    <string name="todo">TODO</string>
    <string name="kiet_cookery">KIET Cookery</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="textview">textview</string>
    <string name="desc">desc</string>
    <string name="enter_email_here">Enter Email Here !</string>
    <string name="enter_password_here">Enter Password Here !</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="or">OR</string>
    <string name="login">LOGIN</string>
    <string name="select_profile_image">Select Outlet Image</string>
    <string name="enter_unique_outlet_name">Enter Unique Outlet Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ok">OK</string>
    <string name="verification_email_sent_successfully">Verification Email Sent Successfully.</string>
    <string name="email_verification_successfully">Email Verification Successfully</string>
    <string name="verify_email_and_then_login_again">Verify Email And Then Login Again !</string>
    <string name="password_reset_email_sent_successfully">Password Reset Email Sent Successfully</string>
    <string name="change_password_and_then_login_again">Change Password And Then Login Again !</string>
    <string name="resent_verification_email">Resend Email</string>
    <string name="email_not_verified_click_to_sent">Email not Verified! Click to Sent</string>
    <string name="cancel">CANCEL</string>
    <string name="personal_info">Personal Info</string>
    <string name="account_details">Account Details</string>
    <string name="enter_account_holder_name">Enter Account Holder Name</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_account_no">Enter Account No.</string>
    <string name="confirm_account_no">Confirm Account No.</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="continuee">Continue</string>
    <string name="enter_manager_name">Enter Manager Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_adhaar_no">Enter Adhaar No.</string>
</resources>