<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication"
    android:background="@drawable/slider3">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:errorTextColor="@color/colorPrimary"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintVertical_bias="0.2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_corner"
            android:hint="@string/enter_email_here"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="password_toggle"
        app:endIconTint="#505050"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:errorTextColor="@color/colorPrimary"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/myGreen"
        app:counterTextAppearance="@style/CounterText"
        app:counterOverflowTextColor="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.3"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:background="@drawable/round_corner"
            android:hint="@string/enter_password_here"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".42"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:elevation="10dp"
        android:onClick="login"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:padding="8dp"
        android:gravity="center"
        style="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:onClick="forgot_password"
        android:text="@string/forgot_password"
        android:alpha=".9"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <View
            android:layout_weight="45"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:alpha=".6"
            android:background="#FFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="10"
            android:text="@string/or"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="45"
            android:layout_gravity="center"
            android:alpha="0.6"
            android:background="#FFF" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".65"
        android:textSize="20sp"
        android:onClick="Register"
        android:alpha="0.9"
        android:background="@drawable/ripple"
        android:text="@string/new_user_register_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>