<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/bg12">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintVertical_bias=".1"
        android:src="@drawable/restaurant"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/select_profile_image"
        android:textSize="14sp"
        android:alpha=".7"
        android:background="@drawable/ripple"
        android:onClick="Select"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="clear_text"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/restaurant_1"
        app:layout_constraintVertical_bias="0.31">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_corner"
            android:hint="@string/enter_unique_outlet_name"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="clear_text"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintVertical_bias="0.42">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_corner"
            android:hint="@string/enter_email_here"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="password_toggle"
        app:endIconTint="#505050"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:errorTextColor="@color/colorPrimary"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/myGreen"
        app:counterTextAppearance="@style/CounterText"
        app:counterOverflowTextColor="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.53"
        app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_password_here"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:endIconMode="password_toggle"
        app:endIconTint="#505050"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:errorTextColor="@color/colorPrimary"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/password_24"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/myGreen"
        app:counterTextAppearance="@style/CounterText"
        app:counterOverflowTextColor="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.64"
        app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cpassword_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:background="@drawable/round_corner"
        android:hint="@string/confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Register"
        app:layout_constraintVertical_bias=".75"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_shade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>